--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "bull": "^4.7.0",
+    "bull-arena": "^3.29.3",
     "cluster": "^0.7.7",
     "concurrently": "^7.0.0",
     "connect-timeout": "^1.9.0",
