adding redis back to app;

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MONGO_PASSWORD="R34skylngtr!"
 REDIS_PORT=6379
 REDIS_HOST=127.0.0.1
 REDIS_DB=0
+REDISTOGO_URL="redis://redistogo:66bb556aab288fabf9855f61923d2f60@sole.redistogo.com:10572/"
