--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "~4.16.1",
     "http": "^0.0.1-security",
     "http-errors": "~1.6.3",
+    "ioredis": "^4.28.5",
     "jade": "~1.11.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
