--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.1.2",
     "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
+    "react-dropdown-select": "^4.8.3",
     "react-icons": "^4.3.1",
     "react-papaparse": "^4.0.2",
     "react-scripts": "5.0.0",
